src/test/resources/invalid/recursiveConstructor/RecursiveConstructor.vas
class Main is
    this(a: Integer, b: Integer) is
       this(a)
    end

    this(a: Integer) is
       this(a, a)
    end
end
